--- a/readme/6-1 詳細設計 - 全体.md
+++ b/readme/6-1 詳細設計 - 全体.md
@@ -8,7 +8,7 @@
 
 チュートリアルのレイヤー構造は下記となる。
 
-![DDD-詳細設計](/Users/zhangnan/dev/NTutorial/readme/pic/DDD-詳細設計.png)
+![DDD-詳細設計](pic/DDD-詳細設計.png)
 
 
 
@@ -55,7 +55,7 @@
 
 ### クラス図
 
-![ProjectClass](/Users/zhangnan/dev/NTutorial/readme/pic/ProjectClass.png)
+![ProjectClass](pic/ProjectClass.png)
 
 ### 補足説明
 
